# EZDCFirmware

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  ProtocolEnums.hpp  idf_component.yml  main.cpp
main/BLDC/: AlignmentControlStrategy.cpp  AlignmentControlStrategy.hpp  DragControlStrategy.cpp  DragControlStrategy.hpp  HaltControlStrategy.cpp  HaltControlStrategy.hpp  McpwmContext.cpp  McpwmContext.hpp  Motor.cpp  Motor.hpp  MotorConfig.hpp  MotorControlStrategy.cpp  MotorControlStrategy.hpp  MotorController.cpp  MotorController.hpp  PulseInjectionControlStrategy.cpp  PulseInjectionControlStrategy.hpp  SensorlessControlStrategy.cpp  SensorlessControlStrategy.hpp  Types.hpp
